gh-4274 Fix invalid SQL WIP
There are still issues with the use of distinct when it is not
needed